--- a/onecolumn.html
+++ b/onecolumn.html
@@ -21,7 +21,7 @@
 							<div class="col-12">
 
 								<header id="header">
-									<h1><a href="index.html" id="logo">Academic Tutoring</a></h1>
+									<h1><a href="index.html" id="logo">Academic Tutoring</a></h1> 
 									<nav id="nav">
 										<a href="index.html" class="current-page-item">About</a>
 										<a href="twocolumn1.html">Subjects</a>
@@ -46,7 +46,7 @@
 									<h2>Blog</h2>
 									<p> This is the blog page, where you can find monthly posts on our blog page about the organization!</p>
                                     <h2> Blog Post 1 - Welcome!</h2>
-                                    <p> Hey everyone! Welcome to Academic Tutoring. This is Marketer here! I work at the company Academic Tutoring as a marketer and I am excited to officially launch the webpage of our organization! With the help of STEM Tutor and Data Analayst, our team has worked hard to bring amazing tutoring service for STEM subjects (Science, Technology, Engineering, and Math). Feel free to try out the service and register for a tutoring session with any of our listed subjects! Happy Studying! Try us out. Send us your questions and we'll respond! </p>
+                                    <p> Hey everyone! Welcome to Academic Tutoring. We are excited to officially launch the webpage of our organization! Our team has worked hard to bring amazing tutoring service for STEM subjects (Science, Technology, Engineering, and Math). Feel free to try out the service and register for a tutoring session with any of our listed subjects! Happy Studying! Try us out. Send us your questions and we'll respond! </p>
                                  
 
 							</div>
