--- a/threecolumn.html
+++ b/threecolumn.html
@@ -58,7 +58,7 @@
 								<section class="middle-content">
 									<h2>Contact Us</h2>
                                     <p> <b> Email: academictutoringteam@gmail.com</b></p>
-                                    <p> <b> Phone Number: </b></p>
+                                    <p> <b> Phone Number: 436 217 8923</b></p>
                                      <section>
 								<h3>Contact Form</h3>
 								<form method="post" action="#">
