--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -49,29 +49,7 @@
 								</section>
 
 								<section>
-									<h2>Registration Links</h2>
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-small">
-												<ul class="link-list">
-													<li><a href="#">Sed neque nisi consequat</a></li>
-													<li><a href="#">Dapibus sed mattis blandit</a></li>
-													<li><a href="#">Quis accumsan lorem</a></li>
-													<li><a href="#">Suspendisse varius ipsum</a></li>
-													<li><a href="#">Eget et amet consequat</a></li>
-												</ul>
-											</div>
-											<div class="col-6 col-12-small">
-												<ul class="link-list">
-													<li><a href="#">Quis accumsan lorem</a></li>
-													<li><a href="#">Sed neque nisi consequat</a></li>
-													<li><a href="#">Eget et amet consequat</a></li>
-													<li><a href="#">Dapibus sed mattis blandit</a></li>
-													<li><a href="#">Vitae magna sed dolore</a></li>
-												</ul>
-											</div>
-										</div>
-									</div>
+									
 								</section>
 
 							</div>
@@ -81,11 +59,11 @@
                                     <h2>Registration Information</h2>
 									<p> This is all the registration information you will need.</p>
                                     <h2> Pricing</h2>
-                                    <p> The rate for the tutoring is $21/hour. </p>
+                                    <p> The rate for the tutoring is $35-50/hour. </p>
                                     <h2> Online or In-Person</h2>
                                     <p> Tutoring can be online via zoom or in-person of your preference. Just fill in the details in the contact form!</p>
                                     <h2> How to Register</h2>
-                                    <p> Click the subject you would like to be tutored on, fill in the contact form, by email, and receive a zoom link. Payment is required via email.</p>
+                                    <p> Click the subject you would like to be tutored on, fill in the contact form, by email, and receive a zoom link. Do an e-transfer before lessons start.</p>
 									
 								</section>
 
